<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/settings_account" android:key="account">
        <EditTextPreference android:singleLine="true" android:title="@string/settings_username" android:key="username" />
        <EditTextPreference android:password="true" android:singleLine="true" android:title="@string/settings_password" android:key="password" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_server" android:key="server" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_domain" android:key="domain" android:summary="@string/settings_domain2" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_username1" android:key="fromuser" android:summary="@string/settings_callerid2" />
        <ListPreference android:entries="@array/port_display_values2" android:title="@string/settings_port" android:key="port" android:dialogTitle="@string/settings_port" android:entryValues="@array/port_values2" />
        <ListPreference android:entries="@array/protocol_display_values2" android:title="@string/settings_protocol" android:key="protocol" android:dialogTitle="@string/settings_protocol" android:entryValues="@array/protocol_values2" />
        <CheckBoxPreference android:title="@string/settings_wlan" android:key="wlan" />
        <CheckBoxPreference android:title="@string/settings_3g" android:key="3g" android:summary="@string/settings_check" />
        <CheckBoxPreference android:title="@string/settings_edge" android:key="edge" android:summary="@string/settings_check" />
        <CheckBoxPreference android:title="@string/settings_vpn" android:key="vpn" android:summary="@string/settings_vpn2" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_account" android:key="account1">
        <EditTextPreference android:singleLine="true" android:title="@string/settings_username" android:key="username1" />
        <EditTextPreference android:password="true" android:singleLine="true" android:title="@string/settings_password" android:key="password1" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_server" android:key="server1" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_domain" android:key="domain1" android:summary="@string/settings_domain2" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_username1" android:key="fromuser1" android:summary="@string/settings_callerid2" />
        <ListPreference android:entries="@array/port_display_values2" android:title="@string/settings_port" android:key="port1" android:dialogTitle="@string/settings_port" android:entryValues="@array/port_values2" />
        <ListPreference android:entries="@array/protocol_display_values2" android:title="@string/settings_protocol" android:key="protocol1" android:dialogTitle="@string/settings_protocol" android:entryValues="@array/protocol_values2" />
        <CheckBoxPreference android:title="@string/settings_wlan" android:key="wlan1" />
        <CheckBoxPreference android:title="@string/settings_3g" android:key="3g1" android:summary="@string/settings_check" />
        <CheckBoxPreference android:title="@string/settings_edge" android:key="edge1" android:summary="@string/settings_check" />
        <CheckBoxPreference android:title="@string/settings_vpn" android:key="vpn1" android:summary="@string/settings_vpn2" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_options">
        <ListPreference android:entries="@array/pref_display_values" android:title="@string/settings_pref" android:key="pref" android:summary="@string/settings_pref2" android:dialogTitle="@string/settings_pref" android:entryValues="@array/pref_values" />
        <CheckBoxPreference android:title="@string/settings_auto_on" android:key="auto_on" android:summary="@string/settings_auto_on2" />
        <CheckBoxPreference android:title="@string/settings_auto_ondemand" android:key="auto_ondemand" android:summary="@string/settings_auto_ondemand2" />
        <CheckBoxPreference android:title="@string/settings_auto_headset" android:key="auto_headset" android:summary="@string/settings_auto_headset2" />
        <CheckBoxPreference android:title="@string/settings_callrecord" android:key="callrecord" android:summary="@string/settings_callrecord2" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_notifications">
        <CheckBoxPreference android:title="@string/settings_MWI" android:key="MWI_enabled" android:summary="@string/settings_MWI2" />
        <CheckBoxPreference android:title="@string/settings_reg" android:key="registration" android:summary="@string/settings_reg2" />
        <CheckBoxPreference android:title="@string/settings_notify" android:key="notify" android:summary="@string/settings_notify2" />
        <CheckBoxPreference android:title="@string/settings_nodata" android:key="nodata" android:summary="@string/settings_nodata2" />
        <org.sipdroid.sipua.ui.SipRingtonePreference android:persistent="false" android:title="@string/settings_sipringtone" android:key="sipringtone" android:summary="@string/settings_sipringtone2" android:dialogTitle="@string/settings_sipringtone_dialog" android:ringtoneType="ringtone" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_av_options">
        <ListPreference android:entries="@array/eargain_display_values" android:title="@string/settings_eargain" android:key="eargain" android:defaultValue="0.25" android:dialogTitle="@string/settings_eargain" android:entryValues="@array/eargain_values" />
        <ListPreference android:entries="@array/eargain_display_values" android:title="@string/settings_micgain" android:key="micgain" android:defaultValue="0.25" android:dialogTitle="@string/settings_micgain" android:entryValues="@array/eargain_values" />
        <ListPreference android:entries="@array/eargain_display_values" android:title="@string/settings_heargain" android:key="heargain" android:defaultValue="0.25" android:dialogTitle="@string/settings_heargain" android:entryValues="@array/eargain_values" />
        <ListPreference android:entries="@array/eargain_display_values" android:title="@string/settings_hmicgain" android:key="hmicgain" android:defaultValue="1.0" android:dialogTitle="@string/settings_hmicgain" android:entryValues="@array/eargain_values" />
        <ListPreference android:entries="@array/vquality_display_values" android:title="@string/settings_vquality" android:key="vquality" android:defaultValue="low" android:dialogTitle="@string/settings_vquality" android:entryValues="@array/vquality_values" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/codecs" android:key="codecs">
        <intent android:targetPackage="org.sipdroid.sipua" android:action="android.intent.action.MAIN" android:targetClass="org.sipdroid.codecs.Codecs$CodecSettings" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_advanced_options">
        <EditTextPreference android:singleLine="true" android:title="@string/settings_search" android:key="search" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_excludepat" android:key="excludepat" />
        <CheckBoxPreference android:title="@string/settings_stun" android:key="stun" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_stun_server" android:key="stun_server" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_stun_server_port" android:key="stun_server_port" />
        <CheckBoxPreference android:title="@string/settings_mmtel" android:key="mmtel" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_mmtel_qvalue" android:key="mmtel_qvalue" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_wireless_options">
        <CheckBoxPreference android:title="@string/settings_ownwifi" android:key="ownwifi" android:summary="@string/settings_ownwifi2" />
        <CheckBoxPreference android:title="@string/settings_selectwifi" android:key="selectwifi" android:summary="@string/settings_selectwifi2" />
        <CheckBoxPreference android:title="@string/settings_keepon" android:key="keepon" android:summary="@string/settings_keepon2" />
        <CheckBoxPreference android:title="@string/menu_bluetooth" android:key="bluetooth" android:summary="@string/settings_bluetooth" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_pbxes_options">
        <CheckBoxPreference android:title="@string/settings_par" android:key="par" android:summary="@string/settings_par2" />
        <CheckBoxPreference android:title="@string/settings_improve" android:key="improve" />
        <EditTextPreference android:hint="https://www1.pbxes.com/name" android:singleLine="true" android:title="@string/settings_posurl" android:key="posurl" />
        <CheckBoxPreference android:title="@string/settings_pos" android:key="pos" android:summary="@string/settings_pos2" />
        <CheckBoxPreference android:title="@string/settings_callback" android:key="callback" android:summary="@string/settings_callback2" />
        <CheckBoxPreference android:title="@string/settings_callthru" android:key="callthru" android:summary="@string/settings_callback2" />
        <EditTextPreference android:hint="Accessno.,PIN#" android:singleLine="true" android:title="@string/settings_callthru2" android:key="callthru2" />
    </PreferenceScreen>
</PreferenceScreen>