<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff736f6e" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="left" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="28.0dip" android:typeface="serif" android:textStyle="bold|italic" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:shadowColor="#ffaaaaaa" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0">
            <Button android:id="@id/contacts_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableLeft="@drawable/ic_menu_dial_pad" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <org.sipdroid.sipua.ui.InstantAutoCompleteTextView android:id="@id/txt_callee2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/hint2" android:singleLine="true" android:inputType="phone" android:imeOptions="actionSend" />
            <org.sipdroid.sipua.ui.InstantAutoCompleteTextView android:id="@id/txt_callee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/hint" android:singleLine="true" android:inputType="textEmailAddress" android:imeOptions="actionSend" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="#ff736f6e" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Button android:layout_gravity="center" android:id="@id/create_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_create" />
    </LinearLayout>
</LinearLayout>